--- a/style.css
+++ b/style.css
@@ -756,8 +756,9 @@ img{
      /*---------skills-------*/
      .skill-list{
         display: grid;
-        grid-template-columns: repeat(auto-fit,minmax(25px,2fr));
-        grid-gap: 90px;
+        grid-template-columns: repeat(3, 3fr);
+        grid-auto-rows: minmax(100px, auto);
+        grid-gap: 10px;
         margin-top: 30px;
        
     }
@@ -772,8 +773,8 @@ img{
     
     }
     .skill-list img{
-        width:70px;
-        height: 70px;
+        width:40px;
+        height: 40px;
         border-radius: 20px;
         margin-bottom: 20px;
         transition:  transform 0.5s;    
@@ -790,6 +791,7 @@ img{
     #css{
         margin-left: 10px;
     }
+    
     /*------------certifications---------*/
     
     #slide_heading{
